feat: rotas e swagger atualizados
